deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
  labels:
    app: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine-container
        image: sua-imagem-do-redmine:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      #- name: regcred  # Se necessário, especifique o segredo para autenticação privada do registro de contêiner

---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  selector:
    app: redmine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer  # Ou ClusterIP, NodePort, dependendo dos requisitos

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine
  namespace: redmine-teste
spec:
  rules:
  - host: redmine
    http:
      paths:
      - backend:
          serviceName: redmine
          servicePort: 3000
status:
  loadBalancer:
    ingress:
    - hostname: daisy-matczak.intrajus.tjrn
    - hostname: derek-melara.intrajus.tjrn
    - hostname: elva-crespino.intrajus.tjrn
    - hostname: kelli-derring.intrajus.tjrn
    - hostname: owen-smestad.intrajus.tjrn
